scss/_component.logo.scss
.logo {
  display: inline-block;
  height: $space-x * 1.5;

  svg {
    display: block;
    height: 100%;
    fill: $color-brand;
  }
}

.logo--tiny {
  height: $space-x * .75;
  vertical-align: baseline;
}

.logo--monochrome {
  svg {
    fill: $color-text-lighter;
  }
}

